fixed controller logic for proper redirect of preference value

--- a/umbra/app/views/users/edit.html.erb
+++ b/umbra/app/views/users/edit.html.erb
@@ -4,5 +4,6 @@ unsubscribe | change your subscribtion choice
 
 <%=@user.id%>
 <%=@user.phone%>
-<%=@user.type%>
+<%=@user.preference%>
 <%=@user.subscribed%>
+<%=params%>
