--- a/umbra/app/views/users/index.html.erb
+++ b/umbra/app/views/users/index.html.erb
@@ -3,6 +3,6 @@
 <%= form_tag("/users", method: "post") do %>
   <%= label_tag(:phone, "phone") %>
   <%= telephone_field(:user, :phone, placeholder: 'ex: 222.222.2222') %>
-  <%= submit_tag("Sublit") %>
+  <%= submit_tag("Submit") %>
 <% end %>
 
