--- a/umbra/app/views/users/show.html.erb
+++ b/umbra/app/views/users/show.html.erb
@@ -1,6 +1,10 @@
 good | bad
-<%=@user.id%>
-<%=@user.phone%>
-<%=@user.preference%>
-<%=@user.subscribed%>
+<ul>
+<li>User_id:<%=@user.id%></li>
+<li>User Phone:<%=@user.phone%></li>
+<li>User Preference:<%=@user.preference%></li>
+<li>User Subscribed: <%=@user.subscribed%></li>
+<li>User Params: <%=params%></li>
+<li>User: <%=@user%></li>
+</ul>
 
